[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bullsquid"
version = "0.0.0"
description = "Portal API backend project."
license = "MIT"
authors = ["Chris Latham <cl@bink.com>"]
readme = "README.md"
repository = "https://github.com/binkhq/bullsquid"

[tool.poetry.scripts]
bullsquid-kubefest = "bullsquid.cmd.kubefest:main"
bullsquid-worker = "bullsquid.cmd.worker:main"

[tool.poetry.dependencies]
python = "^3.10"
piccolo = {extras = ["postgres", "orjson"], version = "^0.74.4"}
fastapi = "^0.78.0"
loguru = "^0.6.0"
sentry-sdk = "^1.5.12"
requests = "^2.27.1"
uvicorn = "^0.17.6"
qbert = "^0.1.4"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pylint = "^2.13.9"
mypy = "^0.960"
ptpython = "^3.0.20"
isort = "^5.10.1"
types-ujson = "^4.2.1"
ipython = "^8.3.0"
coverage = "^6.4"
types-requests = "^2.27.29"
types-PyYAML = "^6.0.7"
watchgod = "^0.8.2"
ward = "^0.66.0-beta.0"
aioresponses = "^0.7.3"

[tool.poetry.group.cmd.dependencies]
PyYAML = "^6.0"
docopt-ng = "^0.7.2"
colorama = "^0.4.4"

[tool.poetry-dynamic-versioning]
enable = true

# [tool.black]
# line-length = 79

[tool.isort]
profile = "black"

[tool.mypy]
exclude = "piccolo_migrations"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.pylint.messages_control]
ignore = "piccolo_migrations"
extension-pkg-whitelist = "pydantic"
# max-line-length = 79
disable = [
    "redefined-outer-name",
    "too-few-public-methods",
]
good-names = [
    "pk",  # primary key
    "ex",  # exception
    "v",   # pydantic validator value field
]

[tool.ward]
order = "random"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/piccolo_migrations/*",  # migrations aren't run in tests currently
    "*/piccolo_app.py",        # just piccolo ORM configuration, nothing to test
    "*/tables.py",             # table definitions are not directly tested
    "bullsquid/log_conf.py",   # log_conf sets up a complex log intercept that is hard to test
    "bullsquid/api/app.py",    # api app initialisation sets up db pools and so on that are hard to test
    "bullsquid/cmd/*.py",      # TEMPORARY: command line tools are not tested right now
]
